fix: Risolve il problema di overflow del testo nella barra laterale

--- a/apps/static/assets/css/volt-scss.css
+++ b/apps/static/assets/css/volt-scss.css
@@ -20138,6 +20138,9 @@ pre[class*=language-] {
 .sidebar .sidebar-inner {
   height: 100vh; }
 
+.sidebar .nav {
+  white-space: normal !important; }
+
 .sidebar .multi-level .nav-link {
   padding-left: 2rem !important; }
 
